Add run test
Renamed repository for scenario; Add buisnes-logic for run tests; Add models for tests; Updated documentation; Updated names for interfaces;
